# mrl_train

./: pyproject.toml
scripts/: helix.sh  queue.sh
src/mrl_train/: utils.py
src/mrl_train/train/: main.py
src/mrl_train/train/configs/: debug.toml  mrl-768-512-256-128-64.toml  mrl-768-64.toml  no-mrl.toml
src/mrl_train/train/configs/bert-base-uncased/: mrl-256.toml  mrl-768-512-256-128-64.toml  mrl-768-512-256-128.toml
src/mrl_train/train/configs/bert-large-uncased/: mrl-768-512-256-128-64.toml  no-mrl.toml
src/mrl_train/train/configs/e5-base/: mrl-768-512-256-128-64.toml  no-mrl.toml
src/mrl_train/train/configs/modernbert-base/: mrl-768-512-256-128-64.toml  no-mrl.toml
src/mrl_train/train/configs/robert-base/: mrl-768-512-256-128-64.toml  no-mrl.toml
src/mrl_train/train/configs/robert-large/: mrl-768-512-256-128-64.toml  no-mrl.toml
src/mrl_train/train/configs/t5-base/: mrl-768-512-256-128-64.toml  no-mrl.toml
src/mrl_train/train/configs/t5-large/: mrl-768-512-256-128-64.toml  no-mrl.toml
